tui/src/chatwidget/snapshots/rexux_tui__chatwidget__tests__workspace_member_usage_limit_prompt.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: popup
---
  Usage limit reached
  Request a limit increase from your owner to continue using rexux. Request increase?

  1. Yes (y)
› 2. No (default) (n)

  Press enter to confirm or esc to go back
